Refactor ApiResponseWrapperAdvice and AuthController to improve response handling and type safety